added url for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bratyslav.github.io/<project-name>/",
+  "homepage": "https://bratyslav.github.io/test_codempire-mcdonalds/",
   "name": "react_pagination",
   "version": "0.1.0",
   "private": true,
